opam-version: "2.0"
synopsis: "WIP"
license: "MIT"
maintainer: "Kate <kit-ty-kate@outlook.com>"
authors: "Kate <kit-ty-kate@outlook.com>"
homepage: "https://github.com/kit-ty-kate/ocaml-timeout"
dev-repo: "git+https://github.com/kit-ty-kate/ocaml-timeout"
bug-reports: "https://github.com/kit-ty-kate/ocaml-timeout/issues"
tags: ["time" "bench" "benchmark" "benchmarking"]
build: ["dune" "build" "-p" name "-j" jobs]
run-test: ["dune" "runtest" "-p" name "-j" jobs]
depends: [
  "ocaml" {>= "4.04"}
  "dune" {>= "3.6"}
]
